# workshop

./: .gitignore  corpus.py  corpus_s17.py  docling-exercise.py  docling-part2-exercise.py  docling-part3-exercise.py  eval_cache.py  hands-on-day-1.py  pyproject.toml
.eval_cache/: s17__modal_qwen3-vl-8b__bm25_search.json  s17__modal_qwen3-vl-8b__hybrid___real_rerank.json  s17__modal_qwen3-vl-8b__hybrid__rrf_.json  s17__modal_qwen3-vl-8b__keyword_search.json  s17__modal_qwen3-vl-8b__vector_search.json  synthetic__modal_qwen3-vl-8b__bm25_search.json  synthetic__modal_qwen3-vl-8b__hybrid___real_rerank.json  synthetic__modal_qwen3-vl-8b__hybrid__rrf_.json  synthetic__modal_qwen3-vl-8b__keyword_search.json  synthetic__modal_qwen3-vl-8b__vector_search.json
advanced_rag_example_answer/: path_a_modular_rag_answer.py  path_b_corrective_rag_answer.py  path_c_self_rag_answer.py  path_d_robust_rag_answer.py
advanced_rag_exercise/: path_a_modular_rag.py  path_b_corrective_rag.py  path_c_self_rag.py  path_d_robust_rag.py
docling-exercise/: docling-part2-exercise.py  docling-part3-exercise.py
docling-exercise-example-answers/: docling_part1_answer.py  docling_part2_answer.py  docling_part3_answer.py  run-answers.sh
docling-exercise-example-answers/output/: rag_chunks.duckdb
output/: rag_chunks.duckdb
output/20260212_125354/chunks/: chunks.json
output/20260212_125354/images/: picture-001.json  picture-004.json  picture-005.json  picture-006.json
output/20260212_125354/tables/: table-001.md
slides/: README.md  slides-day1.md  slides-day2.md  slides-day3.md
(+10 files in other folders)
